[gd_scene load_steps=5 format=3 uid="uid://docs8xbbyc615"]

[ext_resource type="Script" uid="uid://7ltvmr1vitsq" path="res://BoardParts/PlayerHand/player_hand.gd" id="1_ms1yv"]
[ext_resource type="PackedScene" uid="uid://cegqj5en7kabq" path="res://BoardParts/pile.tscn" id="1_vgske"]
[ext_resource type="PackedScene" uid="uid://bq2ulfrqe5p4s" path="res://BoardParts/PlayerHand/card_hand.tscn" id="4_ggfjk"]
[ext_resource type="Texture2D" uid="uid://01vobardlvxa" path="res://assets/piles/discard_pile.png" id="7_ec6sj"]

[node name="PlayerHand" type="MarginContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -218.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5
script = ExtResource("1_ms1yv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DrawPile" parent="HBoxContainer" instance=ExtResource("1_vgske")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="PlayerHand" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="TopScrollContainer" type="ScrollContainer" parent="HBoxContainer/PlayerHand"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 4
vertical_scroll_mode = 0

[node name="TopRow" type="HBoxContainer" parent="HBoxContainer/PlayerHand/TopScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="HandCard3" parent="HBoxContainer/PlayerHand/TopScrollContainer/TopRow" instance=ExtResource("4_ggfjk")]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="HandCard4" parent="HBoxContainer/PlayerHand/TopScrollContainer/TopRow" instance=ExtResource("4_ggfjk")]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="BottomScrollContainer" type="ScrollContainer" parent="HBoxContainer/PlayerHand"]
layout_mode = 2
horizontal_scroll_mode = 4
vertical_scroll_mode = 0

[node name="BottomRow" type="HBoxContainer" parent="HBoxContainer/PlayerHand/BottomScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="HandCard" parent="HBoxContainer/PlayerHand/BottomScrollContainer/BottomRow" instance=ExtResource("4_ggfjk")]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="HandCard2" parent="HBoxContainer/PlayerHand/BottomScrollContainer/BottomRow" instance=ExtResource("4_ggfjk")]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="DiscardPile" parent="HBoxContainer" instance=ExtResource("1_vgske")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
pile_texture = ExtResource("7_ec6sj")

[connection signal="pressed" from="HBoxContainer/DrawPile" to="." method="_on_draw_pile_pressed"]
[connection signal="right_pressed" from="HBoxContainer/DrawPile" to="." method="_on_draw_pile_right_pressed"]
[connection signal="pressed" from="HBoxContainer/DiscardPile" to="." method="_on_discard_pile_pressed"]
[connection signal="right_pressed" from="HBoxContainer/DiscardPile" to="." method="_on_discard_pile_right_pressed"]
